--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
 todo
-1. Go threw the code and refactor again
-2. Write net code
-
+1. Create processing for importants
+2. add more checks
+3. Go threw the code and refactor again
+4. Write net code
