--- a/todo
+++ b/todo
@@ -1,3 +1,6 @@
 todo
-1. Go threw the code and refactor again
+1. Go threw the code and refactor again:
+	--function in commandchecker
+	--template in visitors
+	--cipher data
 2. Write net code
