--- a/todo
+++ b/todo
@@ -3,5 +3,6 @@ todo
 	--fix includes
 	--refactor duplicate code sections
 	--add checks for client-server logic
+	--continue server part
 	--cipher data
 
